[package]
name = "core-parser"
version = "0.1.0"
edition = "2024"


[dependencies]
# CLI & Argument Parsing
clap = { version = "4.0", features = ["derive"] }

# Data Handling & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Performance/System Utilities
ignore = "0.4"          # The high-speed parallel file walker
tree-sitter = "0.24"    # Our AST engine
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
rayon = "1.8"
streaming-iterator = "0.1"


[dev-dependencies]
tempfile = "3"

